# Django-Project

./: .env.example  .gitignore  README.md  db.sqlite3  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blogpost_confirm_delete.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/fixtures/: category_data.json  groups.json  product_data.json
catalog/management/commands/: fill_database.py  fill_groups.py
catalog/migrations/: 0001_initial.py  0002_alter_product_options_product_owner_product_status.py
catalog/templates/: base.html  categories.html  contacts.html  home.html  product_detail.html
catalog/templates/catalog/: categories.html  category_products.html  contacts.html  home.html  login.html  product_change_status.html  product_confirm_delete.html  product_detail.html  product_form.html  product_unpublish.html
catalog/templates/includes/: footer.html  header.html
config/: settings.py  urls.py
templates/includes/: footer.html  header.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_managers.py
users/templates/users/: login.html  profile.html  register.html
